# 2026_NLP_project

./: .gitignore  Analysis.ipynb  ExplorationCSV.ipynb  Main.ipynb  NER.ipynb  OCR.ipynb  README.md  Visualization.ipynb  pyproject.toml  setup.sh
